[metadata]
name = 'di'
version = '0.0.1'
description = ''
author = 'Ofek Lev'
author_email = 'ofekmeister@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/ofek/di'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
